<resources>
    <string name="app_name">Der Essensplan</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_breakfast">Breakfast</string>
    <string name="label_lunch">Lunch</string>
    <string name="label_dinner">Dinner</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="empty">Empty</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="missing_meal">Meal needed!</string>

    <string name="monday_long">Monday</string>
    <string name="tuesday_long">Tuesday</string>
    <string name="wednesday_long">Wednesday</string>
    <string name="thursday_long">Thursday</string>
    <string name="friday_long">Friday</string>
    <string name="saturday_long">Saturday</string>
    <string name="sunday_long">Sunday</string>

</resources>
