<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_week_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:drawable/screen_background_light_transparent" >

    <!-- Monday -->

    <LinearLayout
        android:id="@+id/linear_layout_week_widget_monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/text_view_week_widget_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_monday_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_monday_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_monday_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>
    </LinearLayout>


    <!-- Tuesday -->

    <LinearLayout
        android:id="@+id/linear_layout_week_widget_tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_layout_week_widget_monday">

        <TextView
            android:id="@+id/text_view_week_widget_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_tuesday_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_tuesday_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_tuesday_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>
    </LinearLayout>


    <!-- Wednesday -->

    <LinearLayout
        android:id="@+id/linear_layout_week_widget_wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_layout_week_widget_tuesday">

        <TextView
            android:id="@+id/text_view_week_widget_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_wednesday_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_wednesday_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_wednesday_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>
    </LinearLayout>


    <!-- Thursday -->

    <LinearLayout
        android:id="@+id/linear_layout_week_widget_thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_layout_week_widget_wednesday">

        <TextView
            android:id="@+id/text_view_week_widget_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_thursday_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_thursday_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_thursday_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>
    </LinearLayout>


    <!-- Friday -->

    <LinearLayout
        android:id="@+id/linear_layout_week_widget_friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_layout_week_widget_thursday">

        <TextView
            android:id="@+id/text_view_week_widget_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_friday_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_friday_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_friday_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>
    </LinearLayout>


    <!-- Saturday -->

    <LinearLayout
        android:id="@+id/linear_layout_week_widget_saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_layout_week_widget_friday">

        <TextView
            android:id="@+id/text_view_week_widget_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_saturday_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp" />

        <TextView
            android:id="@+id/text_view_week_widget_saturday_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_saturday_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>
    </LinearLayout>


    <!-- Saturday -->

    <LinearLayout
        android:id="@+id/linear_layout_week_widget_sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_layout_week_widget_saturday">

        <TextView
            android:id="@+id/text_view_week_widget_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_sunday_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_sunday_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_view_week_widget_sunday_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_meal"
            android:textColor="@android:color/black"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="5dp"
            android:layout_margin="2dp"/>
    </LinearLayout>




</RelativeLayout>